fix font on add button

--- a/account-settings.html
+++ b/account-settings.html
@@ -118,7 +118,7 @@
 							</li>
 							<li>
 								<button type="button" class="cancel"><span>Remove</span><span class="end"> &nbsp; </span></button>								
-								<p><a class="add-button small-teal" href="#">Add security question</a></p>
+								<p><a class="add-button" href="#">Add security question</a></p>
 							</li>
 						</ul>
 					</div>
