--- a/create-account-settings.html
+++ b/create-account-settings.html
@@ -131,7 +131,7 @@
 							</li>
 							<li class="controls">
 								<button type="button" class="remove cancel"><span>Remove</span><span class="end"> &nbsp; </span></button>								
-								<p><a class="add-button small-teal add" href="#">Add security question</a></p>
+								<p><a class="add-button add" href="#">Add security question</a></p>
 							</li>
 						</ul>
 					</div>
