fixing radio buttons

--- a/select-lease.html
+++ b/select-lease.html
@@ -61,15 +61,15 @@
 				<form method="POST" action="request-history.html">
 					<ul class="form-with-validation">
 						<li>
-							<input id="lease1" name="lease1" tabindex="2" type="radio" value="" class="padded-left" />
+							<input id="lease1" name="lease" tabindex="2" type="radio" value="" class="padded-left" />
 							<label for="lease1" class="discreet">[ Apartment Address ] Customer Name [ Community ]</label>
 						</li>
 						<li>
-							<input id="lease2" name="lease2" tabindex="3" type="radio" value="" class="padded-left" />							 
+							<input id="lease2" name="lease" tabindex="3" type="radio" value="" class="padded-left" />							 
 							<label for="lease2" class="discreet">123 Main Street #101, Genvieve Cornhill, Archstone Englewood</label>
 						</li>
 						<li>
-							<input id="lease3" name="lease3" tabindex="4" type="radio" value="" class="padded-left" />							 
+							<input id="lease3" name="lease" tabindex="4" type="radio" value="" class="padded-left" />							 
 							<label for="lease3" class="discreet">456 Spruce Street #12, Genvieve Cornhill, Archstone Utopia</label>
 						</li>
 					</ul>					
