--- a/create-account-settings.html
+++ b/create-account-settings.html
@@ -63,13 +63,13 @@
 					<div class="padded">
 						<ul class="two-thirds">
 							<li>							
-								<h3><label for="password">Password <span class="required">*</span></label></h3>
+								<label for="password">Password <span class="required">*</span></label>
 								<input data-val="true" data-val-required="Password is required." id="password" name="password" type="password" value="">
 								<span class="message-text" >(6 character minimum)</span>
 								
 							</li>
 							<li>
-								<h3><label for="confirmPassword">Confirm Password <span class="required">*</span></label></h3>
+								<label for="confirmPassword">Confirm Password <span class="required">*</span></label>
 								<input data-val="true" data-val-required="Confirm Password is required and must match Password." id="confirmPassword" name="confirmPassword" tabindex="3" type="password" value="">
 							</li>
 						</ul>
@@ -82,9 +82,7 @@
 							<li>
 								<ul>
 									<li>
-										<h3>
-											<label for="securityQuestion1">Security Question <span class="required">*</span></label>
-										</h3>
+										<label for="securityQuestion1">Security Question <span class="required">*</span></label>
 										<select data-val="true" data-val-required="Security Question is required." name="securityQuestion1" class="input-validation-error">
 											<option  value="What was your first car?">What was your first car?</option>
 											<option  value="What was the name of your first pet?">What was the name of your first pet?</option>
@@ -100,7 +98,7 @@
 										</span>
 									</li>
 									<li>
-										<h3><label for="securityAnswer1">Security Question Answer <span class="required">*</span></label></h3>
+										<label for="securityAnswer1">Security Question Answer <span class="required">*</span></label>
 										<input data-val="true" data-val-required="Security Question Answer is required." name="securityAnswer1" type="text" value=""  class="input-validation-error">
 										<div class="right">
 											<button type="button" class="remove cancel"><span>Remove</span><span class="end"> &nbsp; </span></button>
@@ -115,7 +113,7 @@
 							<li>
 								<ul>
 									<li>
-										<h3><label>Security Question</label></h3>
+										<label>Security Question</label>
 										<select name="securityQuestion2">
 											<option  value="What was your first car?">What was your first car?</option>
 											<option  value="What was the name of your first pet?">What was the name of your first pet?</option>
@@ -126,7 +124,7 @@
 										</select>
 									</li>
 									<li>
-										<h3><label for="securityAnswer2">Security Question Answer </label></h3>
+										<label for="securityAnswer2">Security Question Answer </label>
 										<input data-val="true" name="securityAnswer2" type="text" value="">
 										<div class="right">
 											<button type="button" class="remove cancel"><span>Remove</span><span class="end"> &nbsp; </span></button>
