eventum bugs and service-request.html

--- a/account-settings.html
+++ b/account-settings.html
@@ -171,7 +171,7 @@
 					<h2>Change Email Address</h2>
 					<div class="padded">
 						<p class="form-note">(This will be your new Archstone sign in email address and will effect all leases associated with your account)</p><br>
-						<ul class="form-with-validation">
+						<ul class="two-thirds">
 							<li>							
 								<label for="email">Current Email Address <span class="required">*</span></label>
 								<input data-val="true" data-val-required="Current Email Address is required." id="email" name="email" type="text" value="" >
