contact info fixes

--- a/contact-information.html
+++ b/contact-information.html
@@ -86,7 +86,7 @@
 				<div class="squared-accordion multi-accordion" >
 					<h2>My Contact</h2>
 					<div>
-						<ul class="form-with-validation">
+						<ul class="two-thirds">
 							<li>
 								<label for="myemail">Email Address<span class="required">*</span></label>
 								<span class="message-text">(for staying in touch)</span>
@@ -116,11 +116,6 @@
 								<!-- VERY IMPORTANT! notice that <p>'s don't exist when the values don't exist -->
 							</li>
 							<li>
-								<label for="myworkphone2">Work Phone</label>
-								<span class="message-text">(optional)</span>
-								<input id="myworkphone2" name="myworkphone2" type="text" value="">
-							</li>
-							<li>
 								<label for="myfaxphone">Fax Phone</label>
 								<span class="message-text">(optional)</span>
 								<input id="myfaxphone" name="myfaxphone" type="text" value="">
@@ -129,7 +124,7 @@
 					</div>
 					<h2>Emergency Contact</h2>
 					<div>
-						<ul class="form-with-validation">
+						<ul class="two-thirds">
 							<li>
 								<label for="ername">Name<span class="required">*</span></label>
 								<input id="ername" name="ername" type="text" value="Nurse Ratched">
@@ -154,8 +149,7 @@
 					</div>
 					<h2>Employer Contact</h2>
 					<div>
-						
-						<ul class="form-with-validation">
+						<ul class="two-thirds">
 							<li>
 								<label for="employmentstatus">Employment Status</label>
 								<input type="text" name="employmentstatus" id="employmentstatus" value="Employed" >
