--- a/account-settings.html
+++ b/account-settings.html
@@ -53,7 +53,7 @@
 		<div class="primary-nav-contents">
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" alt="Archstone"></a>
 			<ul class="primary-nav">
-				<li><a href="onetime-payment.html">Payment</a></li>
+				<li><a href="current-charges.html">Payment</a></li>
 				<li><a href="service-request.html">Service</a></li>
 				<li><a href="#">Information</a></li>
 				<li><a href="#" class="cta-lease">Lease</a></li>
@@ -195,13 +195,17 @@
 		</div>		
 	</div>
   <footer>
-	  <div class="right">
-		<a href="/">ArchstoneApartments.com</a>
-	  </div>
-	  <div class="left-one-row">
-		<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
-		<a href="#">Privacy Policy</a>
-	  </div>
+		<div class="right">
+			<a href="dialog-email.html" class="cta-dialog" rel="footer" title="Contact Us">Contact Us</a>
+		</div>
+		<div class="left">
+			<p>Champions Park  |  2525 E. 104th Ave., Thornton, CO 80233  |  (866) 914-9716</p>
+			<p>
+				<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
+				<a href="#">Privacy Policy</a> | 
+				<a href="/">ArchstoneApartments.com</a>
+			</p>
+		</div>
   </footer>
 
 
