--- a/account-summary.html
+++ b/account-summary.html
@@ -59,10 +59,10 @@
 	<script type="text/javascript">Background.init(); </script><!-- This needs to be here to resize this before the page finishes loading instead of after -->
   <header>
 		<!-- Primary Navigation -->
-		<div class="primary-nav-contents" style="width:790px;">
+		<div class="primary-nav-contents">
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
 			<ul class="primary-nav">
-				<li><a href="onetime-payment.html">Payment</a></li>
+				<li><a href="current-charges.html">Payment</a></li>
 				<li><a href="service-request.html">Service</a></li>
 				<li><a href="#">Information</a></li>
 				<li><a href="#" class="cta-lease">Lease</a></li>
