--- a/request-history-1.html
+++ b/request-history-1.html
@@ -56,7 +56,7 @@
 		<div class="primary-nav-contents">
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
 			<ul class="primary-nav">
-				<li><a href="onetime-payment.html">Payment</a></li>
+				<li><a href="current-charges.html">Payment</a></li>
 				<li class="active">
 					<a href="service-request.html">Service</a>
 				</li>
