--- a/request-history.html
+++ b/request-history.html
@@ -70,7 +70,7 @@
 		<div class="primary-nav-contents">
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" alt="Archstone"></a>
 			<ul class="primary-nav">
-				<li><a href="onetime-payment.html">Payment</a></li>
+				<li><a href="current-charges.html">Payment</a></li>
 				<li class="active">
 					<a href="service-request.html">Service</a>
 				</li>
@@ -86,7 +86,7 @@
 				<li><a href="request-history.html" class="active">Previous Requests</a></li>
 			</ul>
 		</div>
-		<!-- /Secondary Navigation -->
+
   </header>
 
 	<!-- Main Page Wrapper -->
@@ -291,13 +291,18 @@
   </div>
   <footer>
 		<div class="right">
-			<a href="/">ArchstoneApartments.com</a>
+			<a href="dialog-email.html" class="cta-dialog" rel="footer" title="Contact Us">Contact Us</a>
 		</div>
 		<div class="left">
+			<p>Champions Park  |  2525 E. 104th Ave., Thornton, CO 80233  |  (866) 914-9716</p>
+			<p>
 				<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
-				<a href="#">Privacy Policy</a>
+				<a href="#">Privacy Policy</a> | 
+				<a href="/">ArchstoneApartments.com</a>
+			</p>
 		</div>
   </footer>
+
 
 
 	<!-- Use this in all pages -->
