--- a/index.html
+++ b/index.html
@@ -54,64 +54,67 @@
 		</div>
 	</header>
  	<div role="main" id="main" class="clearfix">
-		<div id="signin" class="titled-box clearfix">
-			<h1 class="box-title"><a href="dont-have-account.html" class="title-area-right">Don't have an account yet?</a><span>WELCOME TO myARCHSTONE</span></h1>
-			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
-			<div class="body-left">
-				<p>With exclusive access to our resident-only web sites, hop on any computer with Internet access to:</p>
-				<ul>
-					<li>Pay your rent online</li>
-					<li>Submit and track service requests</li>
-					<li>Find community forms and policies</li>
-					<li>And much, much more...</li>
-				</ul>
-				<p>Log in now to get started!</p>
-			</div>
-			<div class="body-right">
-				<form method="POST" action="select-lease.html">
-					<h3>Sign In</h3>
-					<ul class="form-with-validation">
-						<li>
-							<label for="email">Email Address <span class="required">*</span></label>
-							<input data-val="true" data-val-required="Email Address is required." type="text" name="email" id="email" value="" class="input-validation-error">
-							<span class="ui-state-error-text field-validation-error" data-valmsg-for="email" data-valmsg-replace="true">
-								<span for="email" generated="true" class="" style="">Email Address is required.</span>
-							</span>
-						</li>
-						<li>
-							<label for="password">Password <span class="required">*</span></label>
-							<input data-val="true" type="password" data-val-required="Password is required" name="password" id="password" tabindex="3" value="" class="input-validation-error">
-							<span class="ui-state-error-text field-validation-error" data-valmsg-for="email" data-valmsg-replace="true">
-								<span for="password" generated="true" class="" style="">Password is required.</span>
-							</span>
-						</li>
+		<div id="signin" class="rounded-box clearfix">
+			<h1 class="box-title">
+				<a href="dont-have-account.html" class="right">Don't have an account yet?</a>
+				<span>WELCOME TO myARCHSTONE</span>
+			</h1>
+			<div class="padded clearfix">
+				<div class="body-left">
+					<p>With exclusive access to our resident-only web sites, hop on any computer with Internet access to:</p>
+					<ul>
+						<li>Pay your rent online</li>
+						<li>Submit and track service requests</li>
+						<li>Find community forms and policies</li>
+						<li>And much, much more...</li>
 					</ul>
-					<div class="submit-area-right">
-						<button type="submit" class="submit"><span>Sign In</span><span class="end"> &nbsp; </span></button>
-					</div>
-					<div class="remember-area">
-						<input type="checkbox" name="remember_email" id="remember-email">
-						<p><label for="remember-email">Remember my email</label></p>
-						<p><a href="forgot-your-password.html">Forgot password?</a></p>
-					</div>
-				</form>
+					<p>Log in now to get started!</p>
+				</div>
+				<div class="body-right">
+					<form method="POST" action="select-lease.html">
+						<h3>Sign In</h3>
+						<ul class="form-with-validation">
+							<li>
+								<label for="email">Email Address <span class="required">*</span></label>
+								<input data-val="true" data-val-required="Email Address is required." type="text" name="email" id="email" value="" class="input-validation-error">
+								<span class="ui-state-error-text field-validation-error" data-valmsg-for="email" data-valmsg-replace="true">
+									<span for="email" generated="true" class="" style="">Email Address is required.</span>
+								</span>
+							</li>
+							<li>
+								<label for="password">Password <span class="required">*</span></label>
+								<input data-val="true" type="password" data-val-required="Password is required" name="password" id="password" tabindex="3" value="" class="input-validation-error">
+								<span class="ui-state-error-text field-validation-error" data-valmsg-for="email" data-valmsg-replace="true">
+									<span for="password" generated="true" class="" style="">Password is required.</span>
+								</span>
+							</li>
+						</ul>
+						<div class="submit-area-right">
+							<button type="submit" class="submit"><span>Sign In</span><span class="end"> &nbsp; </span></button>
+						</div>
+						<div class="remember-area">
+							<input type="checkbox" name="remember_email" id="remember-email">
+							<p><label for="remember-email">Remember my email</label></p>
+							<p><a href="forgot-your-password.html">Forgot password?</a></p>
+						</div>
+					</form>
+				</div>
 			</div>
-			<p class="box-footer"><span></span></p>
 		</div>
+		<div class="marketing-boxes">
+			<div class="photo-box left clearfix">
+				<p><strong>OPTIONAL</strong><br>MARKETING<br>REAL<br>ESTATE</p>
+				<img src="images/puppy.png" alt="marketing message">
+			</div>
 		
-		<div class="photo-box left clearfix">
-			<p><strong>OPTIONAL</strong><br>MARKETING<br>REAL<br>ESTATE</p>
-			<img src="images/puppy.png" alt="marketing message">
-		</div>
-		
-		<div class="titled-box left clearfix small-box titled-box-right">
-			<h1 class="box-title"><span>myARCHSTONE MOBILE</span></h1>
-			<div class="body clearfix">
-				<a href="#" class="button-iphone"> &nbsp; </a>
-				<a href="#" class="button-droid"> &nbsp; </a>
+			<div class="rounded-box right clearfix rounded-right">
+				<h1 class="box-title"><span>myARCHSTONE MOBILE</span></h1>
+				<div class="padded-small clearfix">
+					<a href="#" class="button-iphone"> &nbsp; </a>
+					<a href="#" class="button-droid"> &nbsp; </a>
+				</div>
 			</div>
 		</div>
-		
   </div>
   <footer>
 		<div class="right">
