--- a/account-settings.html
+++ b/account-settings.html
@@ -77,7 +77,7 @@
 	<div role="main" id="main" class="clearfix">
 		<div class="accordion-box squared-box clearfix">
 			<form method="POST" action="select-lease.html">
-				<h1 class="box-title"><span class="title-area-right">Community: Utopia</span><span>CREATE YOUR ACCOUNT SETTINGS</span></h1>
+				<h1 class="box-title"><span class="title-area-right">Community: Utopia</span><span>ACCOUNT SETTINGS</span></h1>
 				<div class="squared-accordion" >
 					
 					
